# flowfunc

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  sentences.json
.github/workflow/: ci.yaml
examples/: README.md
examples/broadcast/: README.md  health_checker.py  pyproject.toml  workflow.yaml
examples/image_processing/: main.py  pyproject.toml  workflow.yaml
examples/nlp_text_summarization/: README.md  main.py  pyproject.toml  workflow.yaml
examples/oss_health_analyzer/: README.md  __init__.py  main.py  pyproject.toml  workflow.yaml
examples/pokemon_analysis/: README.md  main.py  pyproject.toml  workflow.yaml
examples/zip/: README.md  character_builder.py  pyproject.toml  workflow.yaml
flowfunc/: __init__.py  __main__.py  __version__.py  app.py  env.py  exceptions.py  locations.py
flowfunc/composition/: chain.py  pipeline.py  step.py  utils.py
flowfunc/config/: __init__.py  config.py  config_source.py  file_config_source.py  loader.py
flowfunc/console/: __init__.py  application.py  exceptions.py  reporter.py
flowfunc/console/commands/: __init__.py  about.py  command.py  debug.py  describe.py  docs.py  graph.py  init.py  new.py  run.py  run2.py  step.py  validate.py
flowfunc/console/commands/generate/: schema.py
flowfunc/console/logging/: filters.py  io_formatter.py  structlog.py
flowfunc/core/exceptions/: __init__.py  base.py
flowfunc/io/: serializer.py
flowfunc/pipeline/: __init__.py  builder.py  executor.py  resolvers.py
flowfunc/pyproject/: exceptions.py  toml.py
flowfunc/run/: __init__.py  artifact_persister.py  coordinator.py  environment.py  input_provider.py  input_resolver.py  output_persister.py  parameter_provider.py  parameter_resolver.py  state_tracker.py  summary_model.py  summary_persister.py
flowfunc/toml/: __init__.py  file.py
flowfunc/utils/: helpers.py  python.py
flowfunc/workflow/: __init__.py  context.py  exceptions.py  function.py  inputs.py  loader.py  outputs.py  pipeline.py  run.py  runner.py  runs.py  schema.py  summary.py  utils.py
flowfunc/workflow_definition/: __init__.py  exceptions.py  function.py  loader.py  outputs.py  pipeline.py  runner.py  schema.py  summary.py  utils.py
pipeflow/: __main__.py  __version__.py  env.py  locations.py  pipeflow.py
pipeflow/config/: config.py  file_config_source.py
pipeflow/console/: application.py  exceptions.py
pipeflow/console/commands/: about.py  command.py  debug.py  describe.py  docs.py  graph.py  init.py  new.py  run.py  step.py  validate.py
pipeflow/console/commands/generate/: schema.py
pipeflow/console/logging/: filters.py  io_formatter.py
pipeflow/core/exceptions/: __init__.py  base.py
pipeflow/pyproject/: exceptions.py  toml.py
pipeflow/toml/: __init__.py  exceptions.py  file.py
pipeflow/utils/: python.py
pipeflow/workflow/: callable.py  exceptions.py  function.py  loader.py  pipeline.py  schema.py  workflow.py  yaml.py
tests/: conftest.py
tests/fixtures/: contexts.py  paths.py  python.py  tempfiles.py  workflows.py
tests/flowfunc/composition/: test_step.py  test_step_mapspec.py
tests/flowfunc/console/: test_application.py
tests/flowfunc/workflow/: helpers.py  test_context.py  test_schema.py  test_workflow.py
tests/flowfunc/workflow_definition/: test_step_definition_mapspec.py
tests/pipeflow/console/: test_application.py
tests/pipeflow/workflow/: helpers.py  test_schema.py  test_workflow.py
